/*
 * Copyright (c) 2009 Stephen Tu <stephen_tu@berkeley.edu>
 * Copyright (c) 2010 Pavel Trukhanov <p.trukhanov@hh.ru>
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 */

option java_package = "com.hh.search.janet.example";
option java_outer_classname = "Calculator";

message CalcRequest {
    required int32 op1 = 1;
    required int32 op2 = 2;
}

message CalcResponse {
    required int32 result = 1;
}

service CalcService {
    rpc Add(CalcRequest) returns (CalcResponse);
    rpc Subtract(CalcRequest) returns (CalcResponse);
    rpc Multiply(CalcRequest) returns (CalcResponse);
    rpc Divide(CalcRequest) returns (CalcResponse);
}

